# teken

./: .flake8  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  culture.yaml  pyproject.toml  sonar-project.properties
.agex/data/pr/: events.jsonl
.claude/skills/cicd/: SKILL.md
.claude/skills/communicate/: SKILL.md
.claude/skills/lint-markdown/: SKILL.md
.claude/skills/version-bump/: SKILL.md
.claude/skills/version-bump/scripts/: bump.py
.github/scripts/: coverage_comment.py
.github/workflows/: docs.yml  publish.yml  security-checks.yml  tests.yml
afi/: __init__.py  __main__.py
afi/cite/: __init__.py  _engine.py
afi/cite/references/python-cli/: AGENT.md
afi/cite/references/python-cli/{{slug}}/: __main__.py
afi/cite/references/python-cli/{{slug}}/cli/: _output.py
afi/cite/references/python-cli/{{slug}}/cli/_commands/: learn.py
afi/cite/references/python-cli/{{slug}}/explain/: __init__.py  catalog.py
afi/cli/: __init__.py  _errors.py  _output.py
afi/cli/_commands/: cli.py  doctor.py  explain.py  learn.py  overview.py
afi/doctor/: __init__.py  _self_checks.py
afi/explain/: __init__.py  catalog.py
afi/overview/: __init__.py  cli_surface.py
afi/rubric/: __init__.py  _runner.py  _types.py
afi/rubric/checks/: errors.py  explain_cmd.py  json_output.py  learnability.py  overview_cmd.py  structure.py
docs/: Gemfile  _config.yml  agent-first.md  agentculture.md  index.md  rubric.md  skill-sources.md
docs/_includes/: head_custom.html
docs/_sass/color_schemes/: dark-terminal.scss
docs/_sass/custom/: custom.scss
packaging/afi-cli/: README.md  pyproject.toml
packaging/teken/: pyproject.toml
scripts/: lint-md.sh
teken/: __init__.py  __main__.py  _brand.py
teken/cite/: __init__.py  _engine.py
teken/cite/references/python-cli/: AGENT.md  MANIFEST.json
teken/cite/references/python-cli/tests/: test_cli.py
teken/cite/references/python-cli/{{slug}}/: __init__.py
teken/cite/references/python-cli/{{slug}}/cli/: __init__.py  _errors.py
teken/cite/references/python-cli/{{slug}}/cli/_commands/: explain.py
teken/cli/: __init__.py  _errors.py  _output.py
teken/cli/_commands/: cli.py  doctor.py  explain.py  learn.py  overview.py
teken/doctor/: __init__.py  _self_checks.py  fixes.py
teken/explain/: __init__.py  catalog.py
teken/overview/: __init__.py  cli_surface.py
teken/rubric/: __init__.py  _runner.py  _types.py
teken/rubric/checks/: doctor.py  errors.py  explain_cmd.py  json_output.py  learnability.py  overview_cmd.py  structure.py
tests/: test_cli.py  test_self_doctor.py  test_self_verify.py
tests/integration/: test_cite_no_collateral.py  test_cli_commands.py  test_cli_doctor.py
tests/unit/: _fake_runner.py  test_cite_engine.py  test_cli_overview_cmd.py  test_coverage_comment.py  test_doctor_cmd_inprocess.py  test_doctor_self.py  test_doctor_target_resolution.py  test_errors.py  test_explain.py  test_learn.py  test_main_error_handling.py  test_output.py  test_overview_cli_surface.py  test_rubric_bundle_doctor.py  test_rubric_errors.py  test_rubric_explain_cmd.py  test_rubric_json_output.py  test_rubric_learnability.py  test_rubric_overview_cmd.py  test_rubric_structure.py  test_rubric_types.py
