# Compatibility wrapper distribution.
#
# `afi-cli` was renamed to `teken`. This metadata-only distribution ships NO
# importable modules — it exists so that `uv tool install afi-cli` keeps working
# by pulling in `teken` (which provides both the `teken` and deprecated `afi`
# commands). The version and the `teken==` pin are kept in lockstep with the
# root project by the version-bump skill and a CI guard.
[project]
name = "afi-cli"
version = "0.8.0"
description = "Deprecated alias for teken — installs teken (the renamed Agent First Interface CLI)."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{name = "AgentCulture"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = ["teken==0.8.0"]

[project.urls]
Homepage = "https://github.com/agentculture/teken"
Issues = "https://github.com/agentculture/teken/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Ship a wheel with no Python modules — only metadata + the teken dependency.
[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.hatch.build.targets.sdist]
include = ["pyproject.toml", "README.md"]
