# Compatibility wrapper distribution.
#
# `teken` was renamed to `agentfront`. This metadata-only distribution ships NO
# importable modules — it exists so that `uv tool install teken` keeps working
# by pulling in `agentfront` (which provides both the `agentfront` command and
# the deprecated `teken` alias). The version and the `agentfront==` pin are kept
# in lockstep with the root project by the version-bump skill and a CI guard.
[project]
name = "teken"
version = "0.10.1"
description = "Deprecated alias for agentfront — installs agentfront (the renamed Agent First Interface CLI)."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{name = "AgentCulture"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = ["agentfront==0.10.1"]

[project.urls]
Homepage = "https://github.com/agentculture/agentfront"
Issues = "https://github.com/agentculture/agentfront/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Ship a wheel with no Python modules — only metadata + the agentfront dependency.
[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.hatch.build.targets.sdist]
include = ["pyproject.toml", "README.md"]
